--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.2",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "sass": "^1.26.10"
   },
   "scripts": {
